# mindless

./: CMakeLists.txt  README.md
code/: build.bat  run.bat  win32_mindless.cpp
code/headers/: mindless_file_io.h  mindless_matrix.h  mindless_memory.h  mindless_renderer.h  mindless_trig.h
code/source/: mindless_file_io.cpp  mindless_matrix.cpp  mindless_memory.cpp  mindless_performance_profiler.cpp  mindless_renderer.cpp  mindless_trig.cpp  win32_mindless.cpp
misc/: shell.bat
